# Dou-Backend

./: Cargo.toml  README.md  docker-compose-server.yaml  docker-compose.yaml  sistemas distribuidos.lnk
backend/: Cargo.toml  dockerfile
db/: dockerfile  schema.sql
nginx/: nginx.conf
services/arena_service/: Cargo.toml  Dockerfile  dockerfile  package-lock.json  package.json  server.js
services/arena_service/driver_db/: Problem.mjs  db.mjs  db_interact.mjs
services/arena_service/matchmaking/: matchmaking.mjs
services/arena_service/src/: main.rs
services/arena_service/src/handlers/: matchmaking.rs
services/arena_service/web_socket_handler/: websocketHandler.mjs
services/auth_service/: Cargo.toml  dockerfile
services/auth_service/src/: database.rs  main.rs
services/material_service/: Cargo.toml  dockerfile
services/material_service/src/: main.rs
services/problem_service/: Cargo.toml  dockerfile
services/problem_service/src/handlers/: create_exercise.rs  delete_exercise.rs  get_exercises.rs  mod.rs
services/problem_service/src/models/: models.rs
services/problem_service/src/routes/: routes.rs
services/problem_service/src/utils/: validations.rs
services/submission_service/: Cargo.toml  dockerfile
services/submission_service/src/: main.rs
services/users_service/: .env  Cargo.toml  dockerfile
services/users_service/.sqlx/: query-40112deff5c06a2eed956ad2f5aadbdab0f4fb64d829655f237b14dbb1d658b8.json
services/users_service/src/: .env  main.rs  models.rs
services/users_service/src/handlers/: create_users.rs  delete_users.rs  get_users.rs  mod.rs  update_users.rs
services/users_service/src/routes/: routes.rs
services/users_service/src/utils/: auth.rs  mod.rs  validations.rs
src/: main.rs
(+26 files in other folders)
