[package]
name = "dou_code_users_service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
tokio = { version = "1.39.3", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"] }
dotenv = "0.15"
hyper = { version = "1", features = ["server", "http1", "http2"] }


